[package]
name = "risk-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.1.2"
dirs = "5.0.1"
xcap = "0.0.8"
ocrs = "0.5.0"
rten = "0.4.0"
rten-imageio = "0.4.0"
rten-tensor = "0.4.0"
reqwest = "0.12.3"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
fuzzy-matcher = "0.3.7"
image = "0.25.1"
colored = "2.1.0"
prettytable-rs = "0.10.0"
term = "0.7.0"