[package]
name = "blitz"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
colored = "2.1.0"
dirs = "5.0.1"
fuzzywuzzy = "0.0.2"
image = "0.25.1"
ocrs = "0.5.0"
open = "5.1.2"
prettytable-rs = "0.10.0"
reqwest = "0.12.3"
rten = "0.4.0"
rten-imageio = "0.4.0"
rten-tensor = "0.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
xcap = "0.0.8"
